# lucy-templates

./: README.md
Basic[V]/: lucy.json
Basic[V]/files/: .gitignore  currents.config.js
Basic[V]/files/cypress/: tsconfig.json
Basic[V]/files/cypress/e2e/base/: base.cy.ts
Default[B]/: lucy.json
Default[B]/files/: .gitignore
Default[C]/: lucy.json
Default[C]/files/: .env  .gitignore  Cargo.toml  Makefile.toml
Default[C]/files/config/: beta.json  ci.json  default.json  development.json  produktion.json  stage.json
Default[C]/files/locales/: todo.yml
Default[E]/: lucy.json
Default[E]/files/: .gitignore  .yarnrc.yml  README.md  app.config.ts  babel.config.js  eas.json  eslint.config.mjs  global.css  index.ts  metro.config.js  pnpm-workspace.yaml  tsconfig.json
Default[E]/files/constants/: theme.ts
Default[E]/files/hooks/: useColorScheme.ts
Default[E]/files/lib/: data.ts
Default[E]/files/lib/utils/: index.ts  polyfills.ts
Default[E]/files/lib/wix/: client.ts  error.ts  index.ts
Default[E]/files/scripts/: reset-project.ts
Default[M]/: lucy.json
Default[M]/files/: .gitignore  .prettierrc.json  .stylelintrc.js  README.md  currents.config.ts  nx.json  pnpm-workspace.yaml  typedoc.json  vitest.config.ts
Default[T]/: lucy.json
Default[T]/files/: .gitignore
Default[V]/: lucy.json
Default[V]/files/: .cursorignore  .prettierrc.js  .stylelintrc.js  typedoc.json
Default[V]/files/cypress/support/: e2e.ts
Default[V]/files/typescript/: tsconfig.json
Default[V]/files/typescript/backend/: http-functions.ts
Default[V]/files/typescript/backend/config/: env.ts  index.ts  mail.ts  nats.ts
Default[V]/files/typescript/public/config/: env.ts  locales.ts
Default[V]/files/typescript/public/i18n/: default.ts
Default[V]/files/typescript/public/models/: splitwise.model.ts
Default[V]/files/typescript/public/models/collections/: organization.model.ts  stage.model.ts  subscriptions.model.ts
Default[V]/files/typescript/public/models/modules/: authz.model.ts
Default[V]/files/typescript/public/models/store/: local.model.ts  memory.model.ts
expo verse[E]/files/: .gitignore  .stylelintrc.json  .yarnrc.yml  App.tsx  DEBUGGING.md  app.config.ts  eas.json  eslint.config.mjs  index.ts  lucy.json  metro.config.js  package.json  tailwind.config.js  tsconfig.json
expo verse[E]/files/android/: settings.gradle
expo verse[E]/files/android/app/: build.gradle
expo verse[E]/files/android/app/src/main/: AndroidManifest.xml
expo verse[E]/files/android/app/src/main/java/so/sunnysideup/daily_verse/: MainActivity.kt  MainApplication.kt
expo verse[E]/files/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
expo verse[E]/files/assets/data/: en.csv
expo verse[E]/files/components/: MainScreen.tsx  Share.tsx
expo verse[E]/files/components/ui/: dev.tsx
expo verse[E]/files/constants/: config.ts
expo verse[E]/files/data/: de.csv  en.csv  version.json
expo verse[E]/files/lib/: content.ts  data.ts  helper.ts  index.ts  state.ts  storage.ts
expo verse[E]/files/lib/taskManager/: index.ts  loadData.ts
expo verse[E]/files/lib/utils/: screenshot.ts
expo verse[E]/files/models/: index.ts
expo verse[E]/files/scripts/: convert-verses.ts  move-artifacts.ts
expo verse[E]/files/types/: index.ts
velo[D]/files/: .prettierignore  cypress.config.mjs  eslint.config.mjs  local.tsconfig.json  vitest.config.ts
velo[D]/files/typescript/backend/config/: authz.ts
velo[D]/files/typescript/backend/lib/http-functions/: sync.ts
velo[D]/files/typescript/public/config/: index.ts  theme.ts
velo[D]/files/typescript/public/i18n/: en.ts
velo[D]/files/typescript/public/models/collections/: member_roles.mode.ts  plan.model.ts  tag.model.ts  translations.model.ts
velo[D]/files/typescript/public/models/modules/: organization.ts
velo[D]/files/typescript/public/models/store/: session.model.ts
velo[D]/files/typescript/public/models/wix/ecom/: payment.ts
